tests/miz/pass/resolve/pass_resolve_parameterized_local_attribute_001.miz
definition
  let x be set;
  attr RankedDef: x is 2-ranked means thesis;
end;
