tests/miz/fail/parser/fail_parser_definition_attributes_recovery_001.miz
definition
  attr : is means ;
  existence junk;
